--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,15 +1,197 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.alandy.mobilesafe.MainActivity" >
+    android:background="@drawable/main_bg"
+    android:orientation="vertical" >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/main_title_bg"
+        android:gravity="center"
+        android:text="金山手机卫士"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
-</RelativeLayout>
+    <SlidingDrawer
+        android:id="@+id/slidingDrawer1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:content="@+id/content"
+        android:handle="@+id/handle" >
+
+        <Button
+            android:id="@+id/handle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/main_bottom_slidingdrawer_bg" />
+
+        <LinearLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#555"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/main_secondview_bg" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <Button
+                    android:id="@+id/main_sync_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/main_slider_item_3"
+                    android:drawableTop="@drawable/main_sync_icon_selector"
+                    android:text="安全备份"
+                    android:textColor="@color/main_textcolor_selector_2"
+                    android:textSize="16.0sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/main_secondview_bg_vertical" />
+
+                <Button
+                    android:id="@+id/main_private_space_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/main_slider_item_3"
+                    android:drawableTop="@drawable/main_private_space_icon_selector"
+                    android:text="私密空间"
+                    android:textColor="@color/main_textcolor_selector_2"
+                    android:textSize="16.0sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/main_secondview_bg_vertical" />
+
+                <Button
+                    android:id="@+id/main_sms_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/main_slider_item_3"
+                    android:drawableTop="@drawable/main_sms_icon_selector"
+                    android:text="通话管理"
+                    android:textColor="@color/main_textcolor_selector_2"
+                    android:textSize="16.0sp" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/main_secondview_bg" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/main_slider_item_3"
+                    android:drawableTop="@drawable/main_sync_icon_selector"
+                    android:text="安全备份"
+                    android:textColor="@color/main_textcolor_selector_2"
+                    android:textSize="16.0sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/main_secondview_bg_vertical" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/main_slider_item_3"
+                    android:drawableTop="@drawable/main_private_space_icon_selector"
+                    android:text="私密空间"
+                    android:textColor="@color/main_textcolor_selector_2"
+                    android:textSize="16.0sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/main_secondview_bg_vertical" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/main_slider_item_3"
+                    android:drawableTop="@drawable/main_sms_icon_selector"
+                    android:text="通话管理"
+                    android:textColor="@color/main_textcolor_selector_2"
+                    android:textSize="16.0sp" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/main_secondview_bg" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/main_slider_item_3"
+                    android:drawableTop="@drawable/main_sync_icon_selector"
+                    android:text="安全备份"
+                    android:textColor="@color/main_textcolor_selector_2"
+                    android:textSize="16.0sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/main_secondview_bg_vertical" />
+
+                <Button
+                    android:id="@+id/bt_main_software_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/main_slider_item_3"
+                    android:drawableTop="@drawable/main_software_icon_selector"
+                    android:text="软件管理"
+                    android:textColor="@color/main_textcolor_selector_2"
+                    android:textSize="16.0sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/main_secondview_bg_vertical" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:background="@drawable/main_slider_item_3"
+                    android:drawableTop="@drawable/main_sms_icon_selector"
+                    android:text="通话管理"
+                    android:textColor="@color/main_textcolor_selector_2"
+                    android:textSize="16.0sp" />
+            </LinearLayout>
+        </LinearLayout>  
+    </SlidingDrawer>
+
+</LinearLayout>
