--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="text_pressed_green">#669933</color>
     <color name="text_color">#fff</color>
+    <color name="main_primary_text_color_2_pressed">#ff74b01a</color>
+    <color name="main_primary_text_color_2">#ffd5d5d5</color>
 </resources>
